--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
 plugins {
     id "com.github.kt3k.coveralls" version "2.3.1"
+    id "net.ltgt.errorprone" version "0.0.8"
 }
 
 allprojects {
